force-app/main/default/objects/Snapshot_Overdue__c/Snapshot_Overdue__c.object-meta.xml
<CustomObject>
    <label>Snapshot Average Overdue</label>
    <nameField>
        <displayFormat>OD-{0000}</displayFormat>
        <label>Snapshot Overdue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Average Overdue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>