force-app/main/default/objects/Snapshot_Overdue__c/fields/Advance_Amount_USD_Equ__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_USD_Equ__c</fullName>
    <label>Advance Amount USD Equ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>