force-app/main/default/objects/Snapshot_Overdue__c/fields/Average_overdue_days__c.field-meta.xml
<CustomField>
    <fullName>Average_overdue_days__c</fullName>
    <formula>Weighted__c / Advance_Amount_USD_Equ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average overdue days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>