force-app/main/default/objects/Snapshot_Overdue__c/fields/Weighted__c.field-meta.xml
<CustomField>
    <fullName>Weighted__c</fullName>
    <label>Weighted Average Overdue days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>